--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -12,14 +12,20 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
+    "dotenv": "^16.3.1",
+    "express": "^5.1.0",
+    "prom-client": "^15.1.3",
     "redis": "^4.6.12",
-    "zod": "^3.22.4",
-    "dotenv": "^16.3.1"
+    "uuid": "^13.0.0",
+    "winston": "^3.18.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/express": "^5.0.5",
     "@types/node": "^20.10.6",
-    "typescript": "^5.3.3",
+    "@types/uuid": "^11.0.0",
     "tsx": "^4.7.0",
+    "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   },
   "engines": {
